# apps/backend-api/src/decorators/api-response.decorator.ts
@@ -1,4 +1,3 @@
-// eslint-disable-next-line @typescript-eslint/no-explicit-any
 import { applyDecorators, Type } from '@nestjs/common'
 import { ApiOkResponse, getSchemaPath, ApiExtraModels } from '@nestjs/swagger'
 import { ApiResponseDto } from '../dto/api-response.dto'
@@ -9,7 +8,6 @@ import { PaginatedResult } from '@/dto/pagination-response.dto'
  * @param model 内部数据实体的 DTO 类（可选。如果不传，则代表 data 返回 null）
  */
 export const ApiSuccessResponse = <TModel extends Type<any>>(model?: TModel) => {
-  
   // 如果没传 model 参数，说明是 logout 或 delete 这种只需要报平安的接口
   if (!model) {
     return applyDecorators(
@@ -66,6 +64,9 @@ export const ApiSuccessPageResponse = <TModel extends Type<any>>(model: TModel) 
                   { $ref: getSchemaPath(PaginatedResult) },
                   {
                     properties: {
+                      total: { type: 'number', description: '总条数', example: 100 },
+                      page: { type: 'number', description: '当前页码', example: 1 },
+                      pageSize: { type: 'number', description: '每页条数', example: 10 },
                       list: {
                         type: 'array',
                         items: { $ref: getSchemaPath(model) },
